--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "cookie": "^0.3.1",
     "cookie-session": "^2.0.0-alpha.2",
+    "deep-extend": "^0.4.1",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
     "express-ws": "^2.0.0",
     "http": "0.0.0",
+    "util": "^0.10.3",
     "websocket": "^1.0.24",
     "ws": "^1.1.1"
   }
